# sembreak-course

./: README.md
week-2-cpp/Basics/: Arithmetic.cpp  CMakeLists.txt  If.cpp  StringMethods.cpp  TempConversion.cpp  consolecalc.cpp  const.cpp  hypotenuseCalculator.cpp  logicaloperators.cpp  main.cpp  mathfunctions.cpp  switches.cpp  ternary.cpp  typeconvert.cpp  typedef.cpp  userinput.cpp
week-2-cpp/HangManTrial/: CMakeLists.txt  hangman_functions.cpp  hangman_functions.h  main.cpp
week_1_java/FlappyBird/src/: App.java  FlappyMaria.java
